--- a/src/incs/inc.less
+++ b/src/incs/inc.less
@@ -8,14 +8,13 @@ body{
     margin:0 !important;
     overscroll-behavior-y: none;
 	touch-action: none;
-    // background:url(https://gd-hbimg.huaban.com/17aaa1627376870a9b0eb2f0ff6c3f2b82a5fc0b2f77b-UelyKb_fw480webp) no-repeat center center;
-    background:url(../images/1mgqyii10k.jpg) no-repeat center center;
+    background:black url('http://oss.dsnbc.com/images/20230308/4ef8464267736dd08257db6602d95c7c.jpeg') no-repeat center center;
     background-size: cover;
     .scene{
         width:100vw;
         height:100vh;
         padding:10px;
-        background-color: rgba(0, 0, 0, 0.8);
+        background-color: rgba(0, 0, 0, 0.5);
         backdrop-filter: blur(30px);
         #scene{
             box-sizing: border-box !important;
